--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Rafael Bonilla Lara" />
+  <meta name="copyright" content="2023, titular de los derechos" />
+  <meta name="robots" content="index,follow" />
+  <meta name="keywords" content="buscador, videojuegos, críticas, reviews" />
+  <meta name="description" content="Descubre Gameaffinity, la plataforma para amantes de videojuegos. 
+Publica críticas, conecta con otros jugadores y mantente al día con las últimas noticias de la 
+industria del videojuego. Únete a nuestra comunidad y encuentra tu espacio para vivir y 
+respirar videojuegos."
+/>
+  <meta charset="UTF-8" />
   <link rel="stylesheet" href="./styles/style.css" />
   <title>Document</title>
 </head>
@@ -44,7 +54,7 @@
       </div>
       <div id="lupa">
         <input type="text" placeholder="Busca tu juego" >
-        <img id="lupaimg" src="./img/magnifying-glass-solid.svg"/> 
+        <img id="lupaimg" src="./img/magnifying-glass-solid.svg" alt="lupa"/> 
       </div>
     </div>
     <!-- Noticias -->
@@ -57,7 +67,7 @@
             <p class="cuerpoNoticia"><br>07/03/2022 de 18:20.<br><br> God of War, uma das franquias de maior sucesso do PlayStation vai ganhar uma série live-action!<span>As negociações estão sendo feitas com o Amazon As negociações estão sendo feitas com o Amazon Prime Video e será baseada na mitologia antiga da franquia.
             </span></p>
           </div>
-          <img src="./img/god-war-ragnarok-2851685.webp"/>
+          <img src="./img/god-war-ragnarok-2851685.webp" alt="God of War"/>
         </div>
         <div class="revButton">
           <button class="tabButton"><a href="reviewCompleta.html">LEER REVIEW</a></button>
@@ -66,10 +76,10 @@
       <div class="noticia">
         <p>ÚLTIMOS ESTRENOS</p>
         <div id="ultEstrenos">
-          <img src="./img/lordsofthefallen-1686937436471.webp"/>
-          <img src="./img/bueqtztxmnj81.png"/>
-          <img src="./img/super-mario-bros-wonder_dgws.300.webp"/>
-          <img class="tabImg" src="./img/darkSouls.webp"/>
+          <img src="./img/lordsofthefallen-1686937436471.webp" alt="Lords of the Fallen"/>
+          <img src="./img/bueqtztxmnj81.webp" alt="Elden Ring"/>
+          <img src="./img/super-mario-bros-wonder_dgws.300.webp" alt="Super Mario Bros Wonder"/>
+          <img class="tabImg" src="./img/darkSouls.webp" alt="Dark Souls"/>
           <span class="aprobado">8.7</span>
           <span class="aprobado">8.8</span>
           <span class="suspenso">4.4</span>
@@ -85,7 +95,7 @@
               <span>As negociações estão sendo feitas com o Amazon Prime Video e será baseada na mitologia antiga da franquia.
               </span></p>
           </div>
-          <img src="./img/sm1_mastered_.jpg"/>
+          <img src="./img/sm1_mastered_.webp" alt="Spiderman"/>
         </div>
         <div class="revButton">
             <button class="tabButton">PARTICIPAR</button>
@@ -96,7 +106,7 @@
     <div id="footer">
       <div id="circulo">
         <a href="#title">
-          <img src="./img/flecha.png"/>
+          <img src="./img/flecha.webp" alt="flecha"/>
         </a>
       </div>
       <div class="decorador">
@@ -107,7 +117,7 @@
       </div>
       <div id="footerDatos">
         <div id="redes">
-          <img src="./img/iconos.JPG"/>
+          <img src="./img/iconos.webp" alt="iconos"/>
         </div>
         <span>2023 GAMEAFFINITY.<br> Todos los derechos reservados | All Rights Reserved</span>
       </div>
