--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="robots" content="index,follow" />
   <meta name="keywords" content="buscador, videojuegos, críticas, reviews" />
   <meta name="description" content="Descubre Gameaffinity, la plataforma para amantes de videojuegos. 
-Publica críticas, conecta con otros jugadores y mantente al día con las últimas noticias de la 
-industria del videojuego. Únete a nuestra comunidad y encuentra tu espacio para vivir y 
-respirar videojuegos."
-/>
-  <meta charset="UTF-8" />
+  Publica críticas, conecta con otros jugadores y mantente al día con las últimas noticias de la 
+  industria del videojuego. Únete a nuestra comunidad y encuentra tu espacio para vivir y 
+  respirar videojuegos."
+  />
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="./styles/style.css" />
-  <title>Document</title>
+  <title>Gameaffinity</title>
 </head>
 <body>
   <div id="container">
@@ -36,13 +36,9 @@ respirar videojuegos."
         </label>
         <ul id="meny">
           <li id="inicio"><a href="./index.html">INICIO</a></li>
-          <hr>
           <li id="reviews"><a href="reviews.html">REVIEWS</a></li>
-          <hr>
           <li id="buscar"><a href="buscar.html">BUSCAR</a></li>
-          <hr>
           <li id="ranking"><a href="ranking.html">RANKING</a></li>
-          <hr>
           <li id="entrar"><a href="entrar.html">ENTRAR</a></li>
         </ul>
       </nav>
@@ -63,14 +59,14 @@ respirar videojuegos."
         <p>ÚLTIMA REVIEW</p>
         <div id="ultReview">
           <div>
-            <p class="titNot">God of War vai ganhar série live-action Amazo Prime we asd wqa. <br><button class="movButton"><a href="reviewCompleta.html">LEER REVIEW</a></button></p>
+            <p class="titNot">God of War vai ganhar série live-action Amazo Prime we asd wqa. <br><br><a class="movButton" href="reviewCompleta.html">LEER REVIEW</a></p>
             <p class="cuerpoNoticia"><br>07/03/2022 de 18:20.<br><br> God of War, uma das franquias de maior sucesso do PlayStation vai ganhar uma série live-action!<span>As negociações estão sendo feitas com o Amazon As negociações estão sendo feitas com o Amazon Prime Video e será baseada na mitologia antiga da franquia.
             </span></p>
           </div>
           <img src="./img/god-war-ragnarok-2851685.webp" alt="God of War"/>
         </div>
         <div class="revButton">
-          <button class="tabButton"><a href="reviewCompleta.html">LEER REVIEW</a></button>
+          <a href="reviewCompleta.html" class="tabButton">LEER REVIEW</a>
         </div>
       </div>
       <div class="noticia">
@@ -83,7 +79,7 @@ respirar videojuegos."
           <span class="aprobado">8.7</span>
           <span class="aprobado">8.8</span>
           <span class="suspenso">4.4</span>
-          <span class="tabImg aprobado"class="aprobado">9.4</span>
+          <span class="tabImg aprobado">9.4</span>
         </div>
       </div>
       <div class="noticia">
