--- a/reviews.html
+++ b/reviews.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Rafael Bonilla Lara" />
+  <meta name="copyright" content="2023, titular de los derechos" />
+  <meta name="robots" content="index,follow" />
+  <meta name="keywords" content="buscador, videojuegos, críticas, reviews" />
+  <meta name="description" content="Descubre Gameaffinity, la plataforma para amantes de videojuegos. 
+  Publica críticas, conecta con otros jugadores y mantente al día con las últimas noticias de la 
+  industria del videojuego. Únete a nuestra comunidad y encuentra tu espacio para vivir y 
+  respirar videojuegos."
+  />
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="./styles/reviews.css" />
-  <title>Document</title>
+  <title>Gameaffinity</title>
 </head>
 <body>
   <div id="container">
@@ -25,14 +35,10 @@
           <span></span>
         </label>
         <ul id="meny">
-            <li id="inicio"><a href="index.html">INICIO</a></li>
-            <hr>
+            <li id="inicio"><a href="./index.html">INICIO</a></li>
             <li id="reviews"><a href="reviews.html">REVIEWS</a></li>
-            <hr>
             <li id="buscar"><a href="buscar.html">BUSCAR</a></li>
-            <hr>
             <li id="ranking"><a href="ranking.html">RANKING</a></li>
-            <hr>
             <li id="entrar"><a href="entrar.html">ENTRAR</a></li>
           </ul>
       </nav>
@@ -44,7 +50,7 @@
       </div>
       <div id="lupa">
         <input type="text" placeholder="Busca tu juego" >
-        <img id="lupaimg" src="./img/magnifying-glass-solid.svg"/> 
+        <img id="lupaimg" src="./img/magnifying-glass-solid.svg" alt="lupa"/> 
       </div>
     </div>
     <!-- Reviews -->
@@ -54,18 +60,18 @@
             <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai.
                 There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai
             </p>
-            <img class="reviewMovil" src="./img/god-war-ragnarok-2851685.webp"/>
+            <img class="reviewMovil" src="./img/god-war-ragnarok-2851685.webp" alt="God of War"/>
             <div class="fotoReview reviewMovil">
-                <img src="./img/avatar1.png"/>
+                <img src="./img/avatar1.webp" alt="avatar1"/>
                 <p>Rafael Bonilla</p>
             </div> 
             <div class="reviewTablet">
                 <div>
-                    <img src="./img/god-war-ragnarok-2872129.webp"/>
+                    <img src="./img/god-war-ragnarok-2872129.webp" alt="God of War"/>
                 </div>
                 <div class="infoTablet">
                     <div class="fotoReview">
-                        <img src="./img/avatar1.png"/>
+                        <img src="./img/avatar1.webp" alt="avatar1"/>
                         <p>Rafael Bonilla</p>
                     </div>
                     <div class="decorador">
@@ -78,15 +84,15 @@
                         Standard dummy text ever since the 1500s, when an unknown printer took.
                         It has survived not only five centuries. scrambled it to make a type specimen book.
                     </p>
-                    <img src="./img/Group 44.svg"/>
+                    <img src="./img/Group44.svg" alt="puntuacion"/>
                 </div>
             </div>
             <p id="cuerpo">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took.</p>
             <div class="estrellas reviewMovil">
-                <img src="./img/Group 44.svg"/>
-                <button><a href="./reviewCompleta.html">LEER MÁS</a></button>
+                <img src="./img/Group44.svg" alt="puntuacion"/>
+                <a href="./reviewCompleta.html">LEER MÁS</a>
             </div>
-            <button class="botonTablet"><a href="./reviewCompleta.html">LEER MÁS</a></button>
+            <a class="botonTablet" href="./reviewCompleta.html">LEER MÁS</a>
             <div class="decorador">
                 <span class="span1"></span>
                 <span class="span2"></span>
@@ -99,18 +105,18 @@
             <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai.
                 There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai
             </p>
-            <img class="reviewMovil" src="./img/lies-P-HD-scaled.jpg"/>
+            <img class="reviewMovil" src="./img/lies-P-HD-scaled.webp" alt="Lies of P"/>
             <div class="fotoReview reviewMovil">
-                <img src="./img/avatar2.png"/>
+                <img src="./img/avatar2.webp" alt="avatar2"/>
                 <p>Claudia Herrero</p>
             </div> 
             <div class="reviewTablet">
                 <div>
-                    <img src="./img/55TVN7MUVJJHVMX3SNRKDKJUUE.avif"/>
+                    <img src="./img/55TVN7MUVJJHVMX3SNRKDKJUUE.avif" alt="Lies of P"/>
                 </div>
                 <div class="infoTablet">
                     <div class="fotoReview">
-                        <img src="./img/avatar2.png"/>
+                        <img src="./img/avatar2.webp" alt="avatar2"/>
                         <p>Claudia Herrero</p>
                     </div>
                     <div class="decorador">
@@ -123,57 +129,12 @@
                         Standard dummy text ever since the 1500s, when an unknown printer took.
                         It has survived not only five centuries. scrambled it to make a type specimen book.
                     </p>
-                    <img src="./img/Group 44.svg"/>
+                    <img src="./img/Group44.svg" alt="puntuacion"/>
                 </div>
             </div>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took.</p>
             <div class="estrellas reviewMovil">
-                <img src="./img/Group 44.svg"/>
-                <button><a href="./reviewCompleta.html">LEER MÁS</a></button>
-            </div>
-            <button class="botonTablet"><a href="./reviewCompleta.html">LEER MÁS</a></button>
-            <div class="decorador">
-                <span class="span1"></span>
-                <span class="span2"></span>
-                <span class="span3"></span>
-                <span class="span4"></span>
-              </div>
-        </div>
-        <div class="review">
-            <span>Neque podro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</span>
-            <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai.
-                There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai
-            </p>
-            <img class="reviewMovil" src="./img/EGS_LordsoftheFallen_HEXWORKS_S1_2560x1440-6e51b07edc72e1cec930eac05c86fdbc.jpg"/>
-            <div class="fotoReview reviewMovil">
-                <img src="./img/avatar3.png"/>
-                <p>José Luis Manrique</p>
-            </div> 
-            <div class="reviewTablet">
-                <div>
-                    <img src="./img/lordsofthefallen-1686937436471.webp"/>
-                </div>
-                <div class="infoTablet">
-                    <div class="fotoReview">
-                        <img src="./img/avatar3.png"/>
-                        <p>José Luis Manrique</p>
-                    </div>
-                    <div class="decorador">
-                        <span class="span1"></span>
-                        <span class="span2"></span>
-                        <span class="span3"></span>
-                        <span class="span4"></span>
-                      </div>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.
-                        Standard dummy text ever since the 1500s, when an unknown printer took.
-                        It has survived not only five centuries. scrambled it to make a type specimen book.
-                    </p>
-                    <img src="./img/Group 44.svg"/>
-                </div>
-            </div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took.</p>
-            <div class="estrellas reviewMovil">
-                <img src="./img/Group 44.svg"/>
+                <img src="./img/Group44.svg" alt="puntuacion"/>
                 <button>LEER MÁS</button>
             </div>
             <button class="botonTablet">LEER MÁS</button>
@@ -189,18 +150,63 @@
             <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai.
                 There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai
             </p>
-            <img class="reviewMovil" src="./img/header.jpg"/>
+            <img class="reviewMovil" src="./img/EGS_LordsoftheFallen_HEXWORKS_S1_2560x1440-6e51b07edc72e1cec930eac05c86fdbc.webp" alt="Lords Of the Fallen"/>
             <div class="fotoReview reviewMovil">
-                <img src="./img/avatar1.png"/>
+                <img src="./img/avatar3.webp" alt="avatar3"/>
+                <p>José Luis Manrique</p>
+            </div> 
+            <div class="reviewTablet">
+                <div>
+                    <img src="./img/lordsofthefallen-1686937436471.webp" alt="Lords of the Fallen"/>
+                </div>
+                <div class="infoTablet">
+                    <div class="fotoReview">
+                        <img src="./img/avatar3.webp" alt="avatar3"/>
+                        <p>José Luis Manrique</p>
+                    </div>
+                    <div class="decorador">
+                        <span class="span1"></span>
+                        <span class="span2"></span>
+                        <span class="span3"></span>
+                        <span class="span4"></span>
+                      </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.
+                        Standard dummy text ever since the 1500s, when an unknown printer took.
+                        It has survived not only five centuries. scrambled it to make a type specimen book.
+                    </p>
+                    <img src="./img/Group44.svg" alt="puntuacion"/>
+                </div>
+            </div>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took.</p>
+            <div class="estrellas reviewMovil">
+                <img src="./img/Group44.svg" alt="puntuacion"/>
+                <button>LEER MÁS</button>
+            </div>
+            <button class="botonTablet">LEER MÁS</button>
+            <div class="decorador">
+                <span class="span1"></span>
+                <span class="span2"></span>
+                <span class="span3"></span>
+                <span class="span4"></span>
+              </div>
+        </div>
+        <div class="review">
+            <span>Neque podro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</span>
+            <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai.
+                There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai
+            </p>
+            <img class="reviewMovil" src="./img/header.webp" alt="Blasphemous 2"/>
+            <div class="fotoReview reviewMovil">
+                <img src="./img/avatar1.webp" alt="avatar1"/>
                 <p>Rafael Bonilla</p>
             </div> 
             <div class="reviewTablet">
                 <div>
-                    <img src="./img/images.jpg"/>
+                    <img src="./img/images.webp" alt="Blasphemous 2"/>
                 </div>
                 <div class="infoTablet">
                     <div class="fotoReview">
-                        <img src="./img/avatar1.png"/>
+                        <img src="./img/avatar1.webp" alt="avatar1"/>
                         <p>Rafael Bonilla</p>
                     </div>
                     <div class="decorador">
@@ -213,12 +219,12 @@
                         Standard dummy text ever since the 1500s, when an unknown printer took.
                         It has survived not only five centuries. scrambled it to make a type specimen book.
                     </p>
-                    <img src="./img/Group 44.svg"/>
+                    <img src="./img/Group44.svg" alt="puntuacion"/>
                 </div>
             </div>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took.</p>
             <div class="estrellas reviewMovil">
-                <img src="./img/Group 44.svg"/>
+                <img src="./img/Group44.svg" alt="puntuacion"/>
                 <button>LEER MÁS</button>
             </div>
             <button class="botonTablet">LEER MÁS</button>
@@ -237,7 +243,7 @@
     <div id="footer">
         <div id="circulo">
           <a href="#title">
-            <img src="./img/flecha.png"/>
+            <img src="./img/flecha.webp" alt="flecha"/>
           </a>
         </div>
         <div class="decorador">
@@ -248,7 +254,7 @@
           </div>
         <div id="footerDatos">
           <div id="redes">
-            <img src="./img/iconos.JPG"/>
+            <img src="./img/iconos.webp" alt="iconos"/>
           </div>
           <span>2023 GAMEAFFINITY.<br> Todos los derechos reservados | All Rights Reserved</span>
         </div>
