--- a/faq.html
+++ b/faq.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Rafael Bonilla Lara" />
+  <meta name="copyright" content="2023, titular de los derechos" />
+  <meta name="robots" content="index,follow" />
+  <meta name="keywords" content="buscador, videojuegos, críticas, reviews" />
+  <meta name="description" content="Descubre Gameaffinity, la plataforma para amantes de videojuegos. 
+  Publica críticas, conecta con otros jugadores y mantente al día con las últimas noticias de la 
+  industria del videojuego. Únete a nuestra comunidad y encuentra tu espacio para vivir y 
+  respirar videojuegos."
+  />
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="./styles/styleFaq.css" />
-  <title>Document</title>
+  <title>Gameaffinity</title>
 </head>
 <body>
   <div id="container">
@@ -26,14 +36,10 @@
         </label>
         <ul id="meny">
             <li id="inicio"><a href="index.html">INICIO</a></li>
-            <hr>
-            <li href="reviews.html" id="reviews"><a href="reviews.html">REVIEWS</a></li>
-            <hr>
-            <li href="buscar.html" id="buscar"><a href="buscar.html">BUSCAR</a></li>
-            <hr>
-            <li href="ranking.html" id="ranking"><a href="ranking.html">RANKING</a></li>
-            <hr>
-            <li href="entrar.html" id="entrar"><a href="entrar.html">ENTRAR</a></li>
+            <li id="reviews"><a href="reviews.html">REVIEWS</a></li>
+            <li id="buscar"><a href="buscar.html">BUSCAR</a></li>
+            <li id="ranking"><a href="ranking.html">RANKING</a></li>
+            <li id="entrar"><a href="entrar.html">ENTRAR</a></li>
           </ul>
       </nav>
       <div class="decorador">
@@ -44,7 +50,7 @@
       </div>
       <div id="lupa">
         <input type="text" placeholder="Busca tu juego" >
-        <img id="lupaimg" src="./img/magnifying-glass-solid.svg"/> 
+        <img id="lupaimg" src="./img/magnifying-glass-solid.svg" alt="lupa"/> 
       </div>
     </div>
     <!-- Faq -->
@@ -65,7 +71,7 @@
     <div id="footer">
         <div id="circulo">
           <a href="#title">
-            <img src="./img/flecha.png"/>
+            <img src="./img/flecha.webp" alt="flecha"/>
           </a>
         </div>
         <div class="decorador">
@@ -76,7 +82,7 @@
           </div>
         <div id="footerDatos">
           <div id="redes">
-            <img src="./img/iconos.JPG"/>
+            <img src="./img/iconos.webp" alt="iconos"/>
           </div>
           <span>2023 GAMEAFFINITY.<br> Todos los derechos reservados | All Rights Reserved</span>
         </div>
