--- a/reviewCompleta.html
+++ b/reviewCompleta.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Rafael Bonilla Lara" />
+  <meta name="copyright" content="2023, titular de los derechos" />
+  <meta name="robots" content="index,follow" />
+  <meta name="keywords" content="buscador, videojuegos, críticas, reviews" />
+  <meta name="description" content="Descubre Gameaffinity, la plataforma para amantes de videojuegos. 
+  Publica críticas, conecta con otros jugadores y mantente al día con las últimas noticias de la 
+  industria del videojuego. Únete a nuestra comunidad y encuentra tu espacio para vivir y 
+  respirar videojuegos."
+  />
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="./styles/reviewCompleta.css" />
-  <title>Document</title>
+  <title>Gameaffinity</title>
 </head>
 <body>
   <div id="container">
@@ -26,13 +36,9 @@
         </label>
         <ul id="meny">
             <li id="inicio"><a href="index.html">INICIO</a></li>
-            <hr>
             <li id="reviews"><a href="reviews.html">REVIEWS</a></li>
-            <hr>
             <li id="buscar"><a href="buscar.html">BUSCAR</a></li>
-            <hr>
             <li id="ranking"><a href="ranking.html">RANKING</a></li>
-            <hr>
             <li id="entrar"><a href="entrar.html">ENTRAR</a></li>
           </ul>
       </nav>
@@ -44,7 +50,7 @@
       </div>
       <div id="lupa">
         <input type="text" placeholder="Busca tu juego" >
-        <img id="lupaimg" src="./img/magnifying-glass-solid.svg"/> 
+        <img id="lupaimg" src="./img/magnifying-glass-solid.svg" alt="lupa"/> 
       </div>
     </div>
     <!-- Review Completa -->
@@ -54,9 +60,9 @@
             <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai.
                 There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pai
             </p>
-            <img src="./img/god-war-ragnarok-2851685.webp"/>
+            <img src="./img/god-war-ragnarok-2851685.webp" alt="God Of War"/>
             <div class="fotoReview">
-                <img src="./img/avatar1.png"/>
+                <img src="./img/avatar1.webp" alt="avatar1"/>
                 <p>Rafael Bonilla</p>
             </div> 
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -66,7 +72,7 @@
             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
             <br><br>
             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
-            <img class="estrella" src="./img/Group 44.svg"/>
+            <img class="estrella" src="./img/Group44.svg" alt="puntuacion"/>
             <div class="decorador">
                 <span class="span1"></span>
                 <span class="span2"></span>
@@ -79,7 +85,7 @@
             <div id="form">
                 <div class="contenidoForm">
                     <p>E-mail</p>
-                    <input type="mail">
+                    <input type="email">
                 </div>
                 <div class="contenidoForm">
                     <p>Mensaje</p>
@@ -93,7 +99,7 @@
     <div id="footer">
         <div id="circulo">
           <a href="#title">
-            <img src="./img/flecha.png"/>
+            <img src="./img/flecha.webp" alt="flecha"/>
           </a>
         </div>
         <div class="decorador">
@@ -104,7 +110,7 @@
           </div>
         <div id="footerDatos">
           <div id="redes">
-            <img src="./img/iconos.JPG"/>
+            <img src="./img/iconos.webp" alt="iconos"/>
           </div>
           <span>2023 GAMEAFFINITY.<br> Todos los derechos reservados | All Rights Reserved</span>
         </div>
