--- a/reviewCompleta.html
+++ b/reviewCompleta.html
@@ -81,19 +81,19 @@
             </div>
         </div>
         <div id="comentario">
-            <span>Comentario para el autor</span>
-            <div id="form">
-                <div class="contenidoForm">
-                    <p>E-mail</p>
-                    <input type="email">
-                </div>
-                <div class="contenidoForm">
-                    <p>Mensaje</p>
-                    <textarea></textarea>
-                </div>
-            </div>
-            <button>Enviar</button>
-        </div>
+          <span>Comentario para el autor</span>
+          <div id="form">
+              <div class="contenidoForm">
+                  <label for="email">E-mail:</label>
+                  <input type="email" id="email" name="email">
+              </div>
+              <div class="contenidoForm">
+                  <label for="mensaje">Mensaje</label>
+                  <textarea id="mensaje" name="mensaje"></textarea>
+              </div>
+          </div>
+          <button type="submit">Enviar</button>
+      </div>
     </div>
     <!-- Footer -->
     <div id="footer">
