--- a/registro.html
+++ b/registro.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Rafael Bonilla Lara" />
+  <meta name="copyright" content="2023, titular de los derechos" />
+  <meta name="robots" content="index,follow" />
+  <meta name="keywords" content="buscador, videojuegos, críticas, reviews" />
+  <meta name="description" content="Descubre Gameaffinity, la plataforma para amantes de videojuegos. 
+  Publica críticas, conecta con otros jugadores y mantente al día con las últimas noticias de la 
+  industria del videojuego. Únete a nuestra comunidad y encuentra tu espacio para vivir y 
+  respirar videojuegos."
+  />
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="./styles/registro.css" />
-  <title>Document</title>
+  <title>Gameaffinity</title>
 </head>
 <body>
   <div id="container">
@@ -25,16 +35,12 @@
           <span></span>
         </label>
         <ul id="meny">
-            <li id="inicio"><a href="index.html">INICIO</a></li>
-            <hr>
-            <li href="reviews.html" id="reviews"><a href="reviews.html">REVIEWS</a></li>
-            <hr>
-            <li href="buscar.html" id="buscar"><a href="buscar.html">BUSCAR</a></li>
-            <hr>
-            <li href="ranking.html" id="ranking"><a href="ranking.html">RANKING</a></li>
-            <hr>
-            <li href="entrar.html" id="entrar"><a href="entrar.html">ENTRAR</a></li>
-          </ul>
+          <li id="inicio"><a href="index.html">INICIO</a></li>
+          <li id="reviews"><a href="reviews.html">REVIEWS</a></li>
+          <li id="buscar"><a href="buscar.html">BUSCAR</a></li>
+          <li id="ranking"><a href="ranking.html">RANKING</a></li>
+          <li id="entrar"><a href="entrar.html">ENTRAR</a></li>
+        </ul>
       </nav>
       <div class="decorador">
         <span class="span1"></span>
@@ -43,49 +49,48 @@
         <span class="span4"></span>
       </div>
       <div id="lupa">
-        <input type="text" placeholder="Busca tu juego" >
-        <img id="lupaimg" src="./img/magnifying-glass-solid.svg"/> 
+        <input type="text" placeholder="Busca tu juego">
+        <img id="lupaimg" src="./img/magnifying-glass-solid.svg" alt="lupa"/> 
       </div>
     </div>
     <!-- Registro -->
     <div class="formEntrar">
       <span>CREA TU CUENTA GRATUITA</span> 
       <div class="datoForm">
-           <p>Nombre de usuario</p>
-           <input placeholder="Introduce aquí tu nombre de usuario">
+        <p>Nombre de usuario</p>
+        <input placeholder="Introduce aquí tu nombre de usuario">
       </div>
       <div class="datoForm">
         <p>E-mail</p>
         <input placeholder="Introduce aquí tu e-mail">
-   </div>
+      </div>
       <div class="datoForm">
-           <p>Contraseña</p>
-           <input type="password" placeholder="Introduce aquí tu contraseña">
+        <p>Contraseña</p>
+        <input type="password" placeholder="Introduce aquí tu contraseña">
       </div>
       <button>Iniciar sesión</button>
       <p>¿Ya tienes una cuenta? <span><a href="entrar.html">Inicia sesión</a></span></p>
-  </div>
-   </div>
+    </div>
     <!-- Footer -->
     <div id="footer">
-        <div id="circulo">
-          <a href="#title">
-            <img src="./img/flecha.png"/>
-          </a>
-        </div>
-        <div class="decorador">
-            <span class="span1"><a href="cookies.html">Privacidad</a></span>
-            <span class="span2"><a href="cookies.html">Términos</a></span>
-            <span class="span3"><a href="cookies.html">Cookies</a></span>
-            <span class="span4"><a href="faq.html">FAQ</a></span>
-          </div>
-        <div id="footerDatos">
-          <div id="redes">
-            <img src="./img/iconos.JPG"/>
-          </div>
-          <span>2023 GAMEAFFINITY.<br> Todos los derechos reservados | All Rights Reserved</span>
-        </div>
+      <div id="circulo">
+        <a href="#title">
+          <img src="./img/flecha.webp" alt="flecha"/>
+        </a>
       </div>
-    </div>    
+      <div class="decorador">
+        <span class="span1"><a href="cookies.html">Privacidad</a></span>
+        <span class="span2"><a href="cookies.html">Términos</a></span>
+        <span class="span3"><a href="cookies.html">Cookies</a></span>
+        <span class="span4"><a href="faq.html">FAQ</a></span>
+      </div>
+      <div id="footerDatos">
+        <div id="redes">
+          <img src="./img/iconos.webp" alt="iconos"/>
+        </div>
+        <span>2023 GAMEAFFINITY.<br> Todos los derechos reservados | All Rights Reserved</span>
+      </div>
+    </div>
+  </div>    
 </body>
 </html>
