--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p>ÚLTIMA REVIEW</p>
         <div id="ultReview">
           <div>
-            <p class="titNot">God of War vai ganhar série live-action Amazo Prime we asd wqa. <br><br><a class="movButton" href="reviewCompleta.html">LEER REVIEW</a></p>
+            <p class="titNot">God of War vai ganhar série live-action Amazo Prime we asd wqa. <span><br><br><a class="movButton" href="reviewCompleta.html">LEER REVIEW</a></span></p>
             <p class="cuerpoNoticia"><br>07/03/2022 de 18:20.<br><br> God of War, uma das franquias de maior sucesso do PlayStation vai ganhar uma série live-action!<span>As negociações estão sendo feitas com o Amazon As negociações estão sendo feitas com o Amazon Prime Video e será baseada na mitologia antiga da franquia.
             </span></p>
           </div>
